docs: 移除富集模板废话并重建零基础入门
- 保留全部真实知识点：原文档正文完整保留为骨架，深度专题、参考文献、延伸阅读、模块文档速查表保留
- 删除 1299 篇文档中的模板化废话：通用 Bloom 学习目标、复读式深入讲解、核心概念串讲、术语表、通用工程原则/案例扩展、代码重复示例与通用注释
- 修复模块通用文本与具体主题错位问题（如 SVG 文档不再出现 HTML5 陷阱内容）
- 42 个非 AI 模块首文档补充真实零基础入门：前置说明、带逐行讲解的第一个示例、学习路径（Git/SQL/MySQL/Redis/网络/安全/云计算/IoT/测试/软件工程/架构/工程实践/大数据/英语/数学等 34 篇新增）
- 全量校验通过：YAML 0 错误、emoji 0、习题/更新段 0
- pnpm --filter @fandex/web build 通过：2338 页